# SoftEtherVPN-5.02.5181

SoftEtherVPN-5.02.5181/: AUTHORS.TXT  CMakeLists.txt  README.md
SoftEtherVPN-5.02.5181/src/: BUILD_UNIX.md  CMakeLists.txt
SoftEtherVPN-5.02.5181/src/Cedar/: Account.c  Account.h  AzureClient.c  CM.c  CMakeLists.txt  Cedar.h  Client.c  Client.h  Command.c  Command.h  Connection.c  Connection.h  DDNS.h  IPC.h  Link.h  Listener.c  Listener.h  MQTTClient.h  MQTTClientPersistence.h  MQTTProperties.h  MQTTReasonCodes.h  MQTTSubscribeOpts.h  Proto_OpenVPN.c  Proto_PPP.h  Radius.c  Radius.h  SM.c  SMInner.h  Sam.c  SeLowUser.c  Session.c  Session.h  VLanUnix.c  VLanWin32.c  Virtual.c  Virtual.h  Wpc.c  Wpc.h
SoftEtherVPN-5.02.5181/src/Cedar/Cedar/: Admin.c  Admin.h  CM.c  CMInner.h  Cedar.c  Cedar.h  Client.h  Connection.c  Connection.h  DDNS.c  Hub.c  Hub.h  IPC.c  Proto_EtherIP.c  Proto_L2TP.c  Proto_L2TP.h  Proto_OpenVPN.h  Proto_PPP.c  Proto_SSTP.c  Proto_SSTP.h  Protocol.c  Protocol.h  SW.c  Server.c  UdpAccel.c  VLanUnix.h  VLanWin32.c  Virtual.c  WinUi.c  WinUi.h
SoftEtherVPN-5.02.5181/src/Mayaqua/: CMakeLists.txt  Cfg.c  MQTTClient.h  MQTTClientPersistence.h  MQTTProperties.h  MQTTReasonCodes.h  MQTTSubscribeOpts.h  Mayaqua.c  Memory.c  Network.c  Network.h  Secure.c  Unix.h  mqtt_vpn.c  mqtt_vpn.h
SoftEtherVPN-5.02.5181/src/Mayaqua/Mayaqua/: Encrypt.c  Encrypt.h  Kernel.c  MQTTClient.h  MayaType.h  Mayaqua.h  Memory.c  Memory.h  Network.c  Pack.c  Pack.h  Str.c  TcpIp.c  Tick64.c  Tick64.h  TunTap.h  Unix.c  Win32.c
SoftEtherVPN-5.02.5181/src/PenCore/: PenCore.rc  resource.h
SoftEtherVPN-5.02.5181/src/SeLow/: SeLowCommon.h
SoftEtherVPN-5.02.5181/src/Wfp/: Wfp.h
SoftEtherVPN-5.02.5181/src/hamcorebuilder/: main.c
SoftEtherVPN-5.02.5181/src/mqtt_vpn/: CMakeLists.txt  mqtt_vpn.c  mqtt_vpn.h
SoftEtherVPN-5.02.5181/src/vpnbridge/: vpnbridge.c
SoftEtherVPN-5.02.5181/src/vpnclient/: RCa04324  vpncsvc.c
SoftEtherVPN-5.02.5181/src/vpncmd/: vpncmd.c
SoftEtherVPN-5.02.5181/src/vpncmgr/: vpncmgr.c
SoftEtherVPN-5.02.5181/src/vpndrvinst/: vpndrvinst.rc
SoftEtherVPN-5.02.5181/src/vpninstall/: vpninstall.c
SoftEtherVPN-5.02.5181/src/vpnserver/: vpnserver.c
SoftEtherVPN-5.02.5181/src/vpnsetup/: vpnsetup.c
SoftEtherVPN-5.02.5181/src/vpnsmgr/: vpnsmgr.c
SoftEtherVPN-5.02.5181/src/vpntest/: vpntest.c
SoftEtherVPN-5.02.5181/src/vpnweb/: RCa16488  vpnwebdlg.c
